# segServer

./: CMakeLists.txt  README.md
include/: Config.hpp  Daemon.hpp  HttpReqInfo.hpp  HuskyServer.hpp  logger.hpp
src/: CMakeLists.txt  ReqHandler.hpp  main.cpp
