SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)



INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)
LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/lib)


ADD_EXECUTABLE(segServer main.cpp)
TARGET_LINK_LIBRARIES(segServer libNLPIR_x64.so)
TARGET_LINK_LIBRARIES(segServer pthread)

